--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -132,7 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
-    <ClCompile Include="Bank..cpp" />
+    <ClCompile Include="Bank.cpp" />
     <ClCompile Include="Bank.h" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
