--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Bank.h">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Bank..cpp">
+    <ClCompile Include="Bank.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
